--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/custom.css" />
+
 	</head>
 	<body class="is-preload">
 
@@ -16,9 +18,9 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
-							<h1 id="title">Celia Low</h1>
-							<p>Marketing Expert</p>
+							<span class="image avatar48"><img src="images/avatar.png" alt="" /></span>
+							<h1 id="title" class="celia">Celia Low</h1>
+							<p>Marketing Enthusiast</p>
 						</div>
 
 					<!-- Nav -->
@@ -37,11 +39,10 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://www.linkedin.com/in/celia-low/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+							<li><a href="https://www.instagram.com/?hl=en" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://www.facebook.com/cel.ljm?ref=bookmarks" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="mailto:celia.low@u.nus.edu" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
 				</div>
@@ -56,15 +57,16 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
-								site template designed by <a href="http://html5up.net">HTML5 UP</a>.</h2>
-								<p>Ligula scelerisque justo sem accumsan diam quis<br />
-								vitae natoque dictum sollicitudin elementum.</p>
+                <div class="bannertext">
+								<h2 class="alt">Celia Low</h2>
+
+								<p class ="aspiration"> Aspiring Brand Manager </p>
+              </div>
 							</header>
 
-							<footer>
+							<!-- <footer>
 								<a href="#portfolio" class="button scrolly">Magna Aliquam</a>
-							</footer>
+							</footer> -->
 
 						</div>
 					</section>
@@ -182,14 +184,11 @@
 			</div>
 
 		<!-- Footer -->
-			<div id="footer">
+			<!-- <div id="footer">
 
-				<!-- Copyright -->
-					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
 
-			</div>
+
+			</div> -->
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
