--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
     <link rel="stylesheet" href="assets/css/custom.css" />
+		<link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
 
 	</head>
 	<body class="is-preload">
@@ -27,7 +28,8 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="#top" id="top-link"><span class="icon fa-home">Intro</span></a></li>
-								<li><a href="#portfolio" id="portfolio-link"><span class="icon fa-th">Portfolio</span></a></li>
+								<li><a href="#workexperience" id="workexperience-link"><span class="icon fa-briefcase">Work Experience</span></a></li>
+								<li><a href="#education" id="education-link"><span class="icon fa-graduation-cap">Education</span></a></li>
 								<li><a href="#about" id="about-link"><span class="icon fa-user">About Me</span></a></li>
 								<li><a href="#contact" id="contact-link"><span class="icon fa-envelope">Contact</span></a></li>
 							</ul>
@@ -71,12 +73,12 @@
 						</div>
 					</section>
 
-				<!-- Portfolio -->
-					<section id="portfolio" class="two">
+				<!-- Work Experience -->
+					<section id="workexperience" class="two">
 						<div class="container">
 
 							<header>
-								<h2>Portfolio</h2>
+								<h2>Work Experience</h2>
 							</header>
 
 							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
@@ -132,6 +134,142 @@
 						</div>
 					</section>
 
+				<!-- Education -->
+					<section id="education" class="three">
+						<div class="container">
+
+							<header>
+								<h2>Education</h2>
+							</header>
+
+							<!-- <a href="#" class="image featured"><img src="images/nuslogo.png" alt="" /></a> -->
+																						<!-- NUS -->
+				<div class="row">
+					<div class="col-2 col-0-mobile"></div>
+					<div class="col-4 col-12-mobile">
+							<img src="images/nuslogo.png"  id ="nus"/>
+					</div>
+					<div class="col-5 col-12-mobile" id="aboutblock">
+						<p> <strong>School of Business</strong></p>
+						<p> <strong>August 2016 - Present </strong></p>
+						<ul>
+							<li><i>Business Administration (Marketing)</i></li>
+							<li>Cumulative Average Point (CAP): /5.00</li>
+							<li>Expected Graduation Date: May 2020</li>
+
+						</ul>
+					</div>
+				</div>
+				<br>
+
+				<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ VJC  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
+				<div class="row" >
+					<div class="col-2 col-0-small"></div>
+					<div class="col-4 col-12-small" >
+						<img src="images/vjclogo.png" id = "vjc"/img>
+					</div>
+					<div class="col-5 col-12-small" id="aboutblock">
+						<p id = "education"> <strong> February 2013 - December 2014 </strong></p>
+						<ul>
+							<li> A Level Results: 7 Distinctions</li>
+							<li> Rank Points: 90/90</li>
+							<li> Vice-President of Public Address</li>
+							<li> Edusave Award For Achievement, Good Leadership & Service 2014</li>
+						</ul>
+					</div>
+				</div>
+				<hr>
+
+				<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~Skills Column 1~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
+				<header>
+					<h1>Skills</h1>
+				</header>
+				<div class="row">
+					<div class="col-6 col-12-small">
+
+						<div class="skill">
+							<div class="rating">
+								<span class="icon fa fa-star"></span>
+								<span class="icon fa fa-star"></span>
+								<span class="icon fa fa-star"></span>
+							</div>
+							<p> Content Marketing </p>
+						</div>
+						<div class="skill">
+							<div class="rating">
+								<span class="icon fa fa-star"></span>
+								<span class="icon fa fa-star"></span>
+								<span class="icon fa fa-star"></span>
+							</div>
+							<p> Digital Marketing </p>
+						</div>
+						<div class="skill">
+							<div class="rating">
+								<span class="icon fa fa-star"></span>
+								<span class="icon fa fa-star"></span>
+								<span class="icon fa fa-star"></span>
+							</div>
+							<p>R Studio</p>
+						</div>
+						<div class="skill">
+							<div class="rating">
+								<span class="icon fa fa-star"></span>
+								<span class="icon fa fa-star"></span>
+								<span class="icon fa fa-star"></span>
+							</div>
+							<p>Microsoft Office</p>
+						</div>
+						<div class="skill">
+							<div class="rating">
+								<span class="icon fa fa-star"></span>
+								<span class="icon fa fa-star"></span>
+								<span class="icon fa fa-star"></span>
+							</div>
+							<p>HTML5</p>
+						</div>
+					</div>
+
+					<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~Skills Column 2~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
+					<div class="col-6 col-12-small">
+						<div class="skill">
+							<div class="rating">
+								<span class="icon fa fa-star"></span>
+								<span class="icon fa fa-star"></span>
+								<span class="icon fa fa-star"></span>
+							</div>
+							<p>CSS3</p>
+						</div>
+						<div class="skill">
+							<div class="rating">
+								<span class="icon fa fa-star"></span>
+								<span class="icon fa fa-star"></span>
+							</div>
+							<p>MySQL</p>
+						</div>
+						<div class="skill">
+							<div class="rating">
+								<span class="icon fa fa-star"></span>
+								<span class="icon fa fa-star"></span>
+							</div>
+							<p>C</p>
+						</div>
+						<div class="skill">
+							<div class="rating">
+								<span class="icon fa fa-star"></span>
+								<span class="icon fa fa-star"></span>
+							</div>
+							<p>Tableau</p>
+						</div>
+						<div class="skill">
+							<div class="rating">
+								<span class="icon fa fa-star"></span>
+							</div>
+							<p>JavaScript</p>
+						</div>
+					</div>
+				</div>
+
+
 				<!-- About Me -->
 					<section id="about" class="three">
 						<div class="container">
@@ -142,12 +280,7 @@
 
 							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
+							<p>I am interested in marketing and brand management, and I see myself as a driven, adaptable, and resilient individual with a hunger to learn. Continuous growth, both professional and personal, is something I strongly believe in and apply in my daily life.</p>
 
 						</div>
 					</section>
@@ -160,23 +293,15 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p>Elementum sem parturient nulla quam placerat viverra
-							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
-							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
-							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
+							<p>Feel free to drop me an email or send me a message on Linkedin to discuss potential work opportunities, or for a detailed resume. :) </p>
 
-							<form method="post" action="#">
-								<div class="row">
-									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
-									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
-									<div class="col-12">
-										<textarea name="message" placeholder="Message"></textarea>
-									</div>
-									<div class="col-12">
-										<input type="submit" value="Send Message" />
-									</div>
-								</div>
-							</form>
+							<!-- Social Icons -->
+								<ul class="icons">
+									<li><a href="https://www.linkedin.com/in/celia-low/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+									<li><a href="https://www.instagram.com/?hl=en" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://www.facebook.com/cel.ljm?ref=bookmarks" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+									<li><a href="mailto:celia.low@u.nus.edu" class="icon fa-envelope"><span class="label">Email</span></a></li>
+								</ul>
 
 						</div>
 					</section>
