--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.png" alt="" /></span>
 							<h1 id="title" class="celia">Celia Low</h1>
-							<p>Marketing Enthusiast</p>
+							<p class="oneliner">Marketing Enthusiast</p>
 						</div>
 
 					<!-- Nav -->
@@ -81,51 +81,54 @@
 								<h2>Work Experience</h2>
 							</header>
 
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-							egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-							Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-							fusce hendrerit lacus ridiculus.</p>
+							<p>I have done various internships in both corporate and startup environments, and have had the privilege to learn useful technical and life skills, as well as valuable insights from my mentors.</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="GUCO.html" target="_blank" class="image fit"><img src="images/GUCOlogo.png" alt="" /></a>
 										<header>
-											<h3>Ipsum Feugiat</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-										<header>
-											<h3>Rhoncus Semper</h3>
+											<h3>GUCO Consulting Group</h3>
 										</header>
 									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="ChangeBug.html" target="_blank" class="image fit"><img src="images/ChangeBugLogo.png" alt="" /></a>
 										<header>
-											<h3>Magna Nullam</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-										<header>
-											<h3>Natoque Vitae</h3>
+											<h3>ChangeBug</h3>
 										</header>
 									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+										<a href="Delegate.html" target="_blank" class="image fit"><img src="images/DelegateAsiaLogo.png" alt="" /></a>
 										<header>
-											<h3>Dolor Penatibus</h3>
+											<h3>Delegate Asia</h3>
 										</header>
 									</article>
+								</div>
+								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+										<a href="DPInfo.html" target="_blank" class="image fit"><img src="images/DPLogo.png" alt="" /></a>
 										<header>
-											<h3>Orci Convallis</h3>
+											<h3>DP Information Group</h3>
+										</header>
+									</article>
+								</div>
+								<div class="col-4 col-12-mobile">
+									<article class="item">
+										<a href="SUTD.html" target="_blank" class="image fit"><img src="images/SUTDLogo.png" alt="" /></a>
+										<header>
+											<h3>SUTD</h3>
+										</header>
+									</article>
+								</div>
+								<div class="col-4 col-12-mobile">
+									<article class="item">
+										<a href="BATA.html" target="_blank" class="image fit"><img src="images/BataLogo.png" alt="" /></a>
+										<header>
+											<h3>Bata Singapore</h3>
 										</header>
 									</article>
 								</div>
@@ -153,8 +156,11 @@
 						<p> <strong>School of Business</strong></p>
 						<p> <strong>August 2016 - Present </strong></p>
 						<ul>
-							<li><i>Business Administration (Marketing)</i></li>
-							<li>Cumulative Average Point (CAP): /5.00</li>
+							<li><i>Business Administration - Marketing (Honours) </i></li>
+							<li>NUS Merit Scholarship</li>
+							<li>NUS Business School Gold Colours Award</li>
+							<li>Vice Director, NUS Bizad Club 30th Business Development Committee</li>
+							<li>Marketing Head, NUS Sheares Hall External Relations Committee</li>
 							<li>Expected Graduation Date: May 2020</li>
 
 						</ul>
@@ -169,107 +175,75 @@
 						<img src="images/vjclogo.png" id = "vjc"/img>
 					</div>
 					<div class="col-5 col-12-small" id="aboutblock">
-						<p id = "education"> <strong> February 2013 - December 2014 </strong></p>
+						<p id = "education"> <strong> January 2014 - December 2015 </strong></p>
 						<ul>
-							<li> A Level Results: 7 Distinctions</li>
-							<li> Rank Points: 90/90</li>
-							<li> Vice-President of Public Address</li>
-							<li> Edusave Award For Achievement, Good Leadership & Service 2014</li>
+							<li> A Level Results: 6 Distinctions</li>
+							<li> Subjects: Physics, Chemistry, Mathematics, Economics, General Paper </li>
+							<li> Class Monitress and Service Leadership Venture Committee member</li>
 						</ul>
 					</div>
 				</div>
-				<hr>
+				<!-- <hr> -->
 
 				<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~Skills Column 1~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 				<header>
-					<h1>Skills</h1>
+					<h2>Skills</h2>
 				</header>
 				<div class="row">
-					<div class="col-6 col-12-small">
+					<div class="col-2 col-0-small"></div>
+					<div class="col-5 col-12-small">
 
-						<div class="skill">
-							<div class="rating">
+						<!-- <div class="skill"> -->
+							<!-- <div class="rating">
 								<span class="icon fa fa-star"></span>
 								<span class="icon fa fa-star"></span>
 								<span class="icon fa fa-star"></span>
-							</div>
-							<p> Content Marketing </p>
-						</div>
-						<div class="skill">
-							<div class="rating">
-								<span class="icon fa fa-star"></span>
-								<span class="icon fa fa-star"></span>
-								<span class="icon fa fa-star"></span>
-							</div>
-							<p> Digital Marketing </p>
-						</div>
-						<div class="skill">
-							<div class="rating">
-								<span class="icon fa fa-star"></span>
-								<span class="icon fa fa-star"></span>
-								<span class="icon fa fa-star"></span>
-							</div>
-							<p>R Studio</p>
-						</div>
-						<div class="skill">
-							<div class="rating">
-								<span class="icon fa fa-star"></span>
-								<span class="icon fa fa-star"></span>
-								<span class="icon fa fa-star"></span>
-							</div>
-							<p>Microsoft Office</p>
-						</div>
-						<div class="skill">
-							<div class="rating">
-								<span class="icon fa fa-star"></span>
-								<span class="icon fa fa-star"></span>
-								<span class="icon fa fa-star"></span>
-							</div>
-							<p>HTML5</p>
-						</div>
+							</div> -->
+							<ul>
+						  <li><p><b>Social Media Marketing</b></p></li>
+						<!-- </div> -->
+						<!-- <div class="skill"> -->
+							<li><p><b>Content Marketing </b></p></li>
+						<!-- </div> -->
+						<!-- <div class="skill"> -->
+							<li><p><b>Search Engine Marketing</b></p></li>
+						<!-- </div>
+						<div class="skill"> -->
+							<li><p><b>Email Marketing</b></p></li>
+						<!-- </div> -->
+						<!-- <div class="skill"> -->
+							<li><p><b>Traditional Marketing</b></p></li>
+						<!-- </div> -->
+						<!-- <div class="skill"> -->
+							<li><p><b>Leadership</b></p></li>
+						<!-- </div> -->
+					</ul>
 					</div>
 
 					<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~Skills Column 2~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-					<div class="col-6 col-12-small">
-						<div class="skill">
-							<div class="rating">
-								<span class="icon fa fa-star"></span>
-								<span class="icon fa fa-star"></span>
-								<span class="icon fa fa-star"></span>
-							</div>
-							<p>CSS3</p>
-						</div>
-						<div class="skill">
-							<div class="rating">
-								<span class="icon fa fa-star"></span>
-								<span class="icon fa fa-star"></span>
-							</div>
-							<p>MySQL</p>
-						</div>
-						<div class="skill">
-							<div class="rating">
-								<span class="icon fa fa-star"></span>
-								<span class="icon fa fa-star"></span>
-							</div>
-							<p>C</p>
-						</div>
-						<div class="skill">
-							<div class="rating">
-								<span class="icon fa fa-star"></span>
-								<span class="icon fa fa-star"></span>
-							</div>
-							<p>Tableau</p>
-						</div>
-						<div class="skill">
-							<div class="rating">
-								<span class="icon fa fa-star"></span>
-							</div>
-							<p>JavaScript</p>
-						</div>
-					</div>
+					<div class="col-5 col-12-small">
+						<!-- <div class="skill"> -->
+							<ul>
+							<li><p><b>Adobe Premier Pro</b></p></li>
+						<!-- </div> -->
+						<!-- <div class="skill"> -->
+							<li><p><b>Adobe Photoshop</b></p></li>
+						<!-- </div> -->
+						<!-- <div class="skill"> -->
+							<li><p><b>Adobe Illustrator</b></p></li>
+						<!-- </div> -->
+						<!-- <div class="skill"> -->
+							<li><p><b>Microsoft Office</b></p></li>
+						<!-- </div> -->
+						<!-- <div class="skill"> -->
+						<li><p><b>Business Development</b></p></li>
+						<!-- </div> -->
+					 <!-- <div class="skill"> -->
+						<li><p><b>Interpersonal Skills</b></p></li>
+					 <!-- </div> -->
 				</div>
 
-
+				<hr>
 				<!-- About Me -->
 					<section id="about" class="three">
 						<div class="container">
@@ -281,7 +255,9 @@
 							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 
 							<p>I am interested in marketing and brand management, and I see myself as a driven, adaptable, and resilient individual with a hunger to learn. Continuous growth, both professional and personal, is something I strongly believe in and apply in my daily life.</p>
-
+							<p> My favourite quote: <strong> "As we are liberated from our fear, our presence automatically liberates others." </strong>
+						  <br>I strive to encourage and inspire others to be better versions of themselves.</p>
+							<p> One of my hobbies is volunteering, because I find a strong sense of fulfillment in helping others. TBC </p>
 						</div>
 					</section>
 
@@ -298,8 +274,6 @@
 							<!-- Social Icons -->
 								<ul class="icons">
 									<li><a href="https://www.linkedin.com/in/celia-low/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
-									<li><a href="https://www.instagram.com/?hl=en" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="https://www.facebook.com/cel.ljm?ref=bookmarks" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 									<li><a href="mailto:celia.low@u.nus.edu" class="icon fa-envelope"><span class="label">Email</span></a></li>
 								</ul>
 
