--- a/index.html
+++ b/index.html
@@ -170,11 +170,11 @@
 
 				<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ VJC  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 				<div class="row" >
-					<div class="col-2 col-0-small"></div>
-					<div class="col-4 col-12-small" >
+					<div class="col-2 col-0-mobile"></div>
+					<div class="col-4 col-12-mobile" >
 						<img src="images/vjclogo.png" id = "vjc"/img>
 					</div>
-					<div class="col-5 col-12-small" id="aboutblock">
+					<div class="col-5 col-12-mobile" id="aboutblock">
 						<p id = "education"> <strong> January 2014 - December 2015 </strong></p>
 						<ul>
 							<li> A Level Results: 6 Distinctions</li>
@@ -190,7 +190,7 @@
 					<h2>Skills</h2>
 				</header>
 				<div class="row">
-					<div class="col-2 col-0-small"></div>
+					<div class="col-1 col-0-small"></div>
 					<div class="col-5 col-12-small">
 
 						<!-- <div class="skill"> -->
@@ -247,20 +247,38 @@
 				<!-- About Me -->
 					<section id="about" class="three">
 						<div class="container">
-
 							<header>
-								<h2>About Me</h2>
+								<h2><center>About Me</center></h2>
 							</header>
 
-							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
-
+							<!-- <a href="#" class="image featured"><img src="#" alt="" /></a> -->
 							<p>I am interested in marketing and brand management, and I see myself as a driven, adaptable, and resilient individual with a hunger to learn. Continuous growth, both professional and personal, is something I strongly believe in and apply in my daily life.</p>
 							<p> My favourite quote: <strong> "As we are liberated from our fear, our presence automatically liberates others." </strong>
 						  <br>I strive to encourage and inspire others to be better versions of themselves.</p>
-							<p> One of my hobbies is volunteering, because I find a strong sense of fulfillment in helping others. TBC </p>
+							<p> One of my hobbies is volunteering, because I find a strong sense of fulfillment in helping others.
+									<div class="row">
+										<div class="col-4 col-12-mobile" id="photo1">
+											<article class="item">
+									    	<img src="images/Groupphoto1.jpg"></img>
+											</article>
+										</div>
+										<div class="col-4 col-12-mobile" id="photo1">
+											<article class="item">
+									    	<img src="images/Groupphoto2.jpg"></img>
+											</article>
+										</div>
+										<div class="col-4 col-12-mobile" id="photo1">
+											<article class="item">
+									    	<img src="images/Groupphoto3.jpg"></img>
+											</article>
+										</div>
+
+
+								 One significant community involvement experience I had was the Embrace Vietnam project I did in recently. It is an ongoing project under AIESEC’s Global Volunteer Programme, aimed at providing quality English education to underprivileged Vietnamese children in Tay Ninh, a province in Vietnam. During the one month I spent in Tay Ninh, I had enjoyable coffee chats with the people in Tay Ninh English Club, to help them improve their conversational English. I was also given the autonomy to craft and conduct English lessons for underprivileged kids in various areas. Every day was extremely fulfilling, and I was immensely thankful for all the new experiences, and all the spontaneity and heartwarming new friendships made. Last but not least, I will always remain inspired by the love of learning displayed by the children and adults I interacted with.
+							   If you are interested in finding out more about this project and my experience, feel free to contact me through email or social media. :) </p>
+							  </div>
 						</div>
 					</section>
-
 				<!-- Contact -->
 					<section id="contact" class="four">
 						<div class="container">
@@ -269,7 +287,7 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p>Feel free to drop me an email or send me a message on Linkedin to discuss potential work opportunities, or for a detailed resume. :) </p>
+							<p>Feel free to drop me an email or send me a message on Linkedin to discuss potential work opportunities, or for a detailed resume. </p>
 
 							<!-- Social Icons -->
 								<ul class="icons">
