--- a/GUCO.html
+++ b/GUCO.html
@@ -1,3 +1,91 @@
 <html>
-  <h1>tbc</h1>
-<html>
+	<head>
+		<title>GUCO Consulting Internship</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/custom.css" />
+		<link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+
+	</head>
+	<body class="is-preload">
+
+		<!-- Header -->
+			<div id="header">
+
+				<div class="top">
+
+					<!-- Logo -->
+						<div id="logo">
+							<span class="image avatar48"><img src="images/avatar.png" alt="" /></span>
+							<h1 id="title" class="celia">Celia Low</h1>
+							<p class="oneliner">Marketing Enthusiast</p>
+						</div>
+
+					<!-- Nav -->
+						<nav id="nav">
+							<ul>
+								<li><a href="https://celialow.github.io/Profile/#top" target="_blank" id="top-link"><span class="icon fa-home">Intro</span></a></li>
+								<li><a href="https://celialow.github.io/Profile/#workexperience" target="_blank" id="workexperience-link"><span class="icon fa-briefcase">Work Experience</span></a></li>
+								<li><a href="https://celialow.github.io/Profile/#education" target="_blank" id="education-link"><span class="icon fa-graduation-cap">Education</span></a></li>
+								<li><a href="https://celialow.github.io/Profile/#about" target="_blank" id="about-link"><span class="icon fa-user">About Me</span></a></li>
+								<li><a href="https://celialow.github.io/Profile/#contact" target="_blank" id="contact-link"><span class="icon fa-envelope">Contact</span></a></li>
+							</ul>
+						</nav>
+
+				</div>
+
+				<div class="bottom">
+
+					<!-- Social Icons -->
+						<ul class="icons">
+							<li><a href="https://www.linkedin.com/in/celia-low/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+							<li><a href="https://www.instagram.com/?hl=en" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://www.facebook.com/cel.ljm?ref=bookmarks" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="mailto:celia.low@u.nus.edu" class="icon fa-envelope"><span class="label">Email</span></a></li>
+						</ul>
+
+				</div>
+
+			</div>
+      <!-- About Me -->
+					<section id=guco class="three">
+						<div class="container">
+							<header>
+								<h2><center>GUCO Consulting Internship</center></h2>
+							</header>
+
+							<!-- <a href="#" class="image featured"><img src="#" alt="" /></a> -->
+							<p>TBC</p>
+
+									<div class="row">
+										<div class="col-4 col-12-mobile" id="photo1">
+											<article class="item">
+									    	<img src=""></img>
+											</article>
+										</div>
+										<div class="col-4 col-12-mobile" id="photo1">
+											<article class="item">
+									    	<img src=""></img>
+											</article>
+										</div>
+										<div class="col-4 col-12-mobile" id="photo1">
+											<article class="item">
+									    	<img src=""></img>
+											</article>
+										</div>
+							   </div>
+						</div>
+					</section>
+
+          <!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
+</html>
