--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="GUCO.html" target="_blank" class="image fit"><img src="images/GUCOlogo.png" alt="" /></a>
+										<a href="GUCO.html" target="_blank" class="image fit"><img src="images/GUCO.png" alt="" /></a>
 										<header>
 											<h3>GUCO Consulting Group</h3>
 										</header>
