--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 				<div class="row" >
 					<div class="col-2 col-0-mobile"></div>
 					<div class="col-4 col-12-mobile" >
-						<img src="images/vjclogo.png" id = "vjc"/img>
+						<img src="images/Vjc.png" id = "vjc"/img>
 					</div>
 					<div class="col-5 col-12-mobile" id="aboutblock">
 						<p id = "education"> <strong> January 2014 - December 2015 </strong></p>
