--- a/GUCO.html
+++ b/GUCO.html
@@ -48,34 +48,16 @@
 				</div>
 
 			</div>
-      <!-- About Me -->
+      <!-- GUCO Consulting Internship -->
 					<section id=guco class="three">
 						<div class="container">
 							<header>
 								<h2><center>GUCO Consulting Internship</center></h2>
 							</header>
 
-							<!-- <a href="#" class="image featured"><img src="#" alt="" /></a> -->
-							<p>TBC</p>
-
-									<div class="row">
-										<div class="col-4 col-12-mobile" id="photo1">
-											<article class="item">
-									    	<img src=""></img>
-											</article>
-										</div>
-										<div class="col-4 col-12-mobile" id="photo1">
-											<article class="item">
-									    	<img src=""></img>
-											</article>
-										</div>
-										<div class="col-4 col-12-mobile" id="photo1">
-											<article class="item">
-									    	<img src=""></img>
-											</article>
-										</div>
-							   </div>
-						</div>
+							<a href="GUCO.png" class="image featured"><img src="images/GUCO.png" alt="" /></a>
+							<p class="gucodescription">During my 3-month internship at GUCO Consulting, I was given the autonomy to plan, implement, and optimise a few campaigns for Castilla, an upmarket furniture brand, and managed digital marketing for Castilla across various channels. I devised a marketing action plan for Castilla’s campaigns, and created content for Castilla’s Facebook page and email campaigns, while handling Castilla’s search engine marketing as well. I also helped to set up Castilla’s new website, and did content marketing for Castilla’s website and blog. On the traditional end, I designed banners to boost walk-in sales, and also reached out to corporates for potential partnership opportunities. In order to optimise the campaign strategies, I collated reports for Castilla’s digital channels, and looked for ways to improve metrics through testing and new initiatives.</p>
+            </div>
 					</section>
 
           <!-- Scripts -->
