--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 				<header>
 					<h2>Skills</h2>
 				</header>
-				<div class="row">
+				<div class="row" id="skills">
 					<div class="col-2 col-0-small"></div>
 					<div class="col-5 col-12-small">
 
@@ -221,7 +221,7 @@
 					</div>
 
 					<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~Skills Column 2~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-					<div class="col-5 col-12-small">
+					<div class="col-5 col-12-small" id="skills">
 						<!-- <div class="skill"> -->
 							<ul>
 							<li><p><b>Adobe Premier Pro</b></p></li>
@@ -252,11 +252,11 @@
 							</header>
 
 							<!-- <a href="#" class="image featured"><img src="#" alt="" /></a> -->
-							<p>I am interested in marketing and brand management, and I see myself as a driven, adaptable, and resilient individual with a hunger to learn. Continuous growth, both professional and personal, is something I strongly believe in and apply in my daily life.</p>
-							<p> My favourite quote: <strong> "As we are liberated from our fear, our presence automatically liberates others." </strong>
-						  <br>I strive to encourage and inspire others to be better versions of themselves.</p>
-							<p> One of my hobbies is volunteering, because I find a strong sense of fulfillment in helping others.
-									<div class="row">
+							<p class="selfintro">I am interested in marketing and brand management, and I see myself as a driven, adaptable, and resilient individual with a hunger to learn. Continuous growth, both professional and personal, is something I strongly believe in and apply in my daily life.</p>
+							<p class="quote"> My favourite quote is: <strong> "As we are liberated from our fear, our presence automatically liberates others." </strong>
+						  I strive to encourage and inspire others to be better versions of themselves.</p>
+							<p class="cip"> One of my hobbies is volunteering, because I find a strong sense of fulfillment in helping others.
+									<!-- <div class="row">
 										<div class="col-4 col-12-mobile" id="photo1">
 											<article class="item">
 									    	<img src="images/Groupphoto1.jpg"></img>
@@ -271,11 +271,12 @@
 											<article class="item">
 									    	<img src="images/Groupphoto3.jpg"></img>
 											</article>
-										</div>
+										</div> -->
 
+								 One significant community involvement experience I had was the Embrace Vietnam project I did recently.It is an ongoing project under AIESEC’s Global Volunteer Programme, aimed at providing quality English education to underprivileged Vietnamese children in Tay Ninh, a province in Vietnam.</p>
+								 <!-- <a href="tayninh.html" target="_blank" class="tayninhbutton">Link to Project</a> -->
 
-								 One significant community involvement experience I had was the Embrace Vietnam project I did in recently. It is an ongoing project under AIESEC’s Global Volunteer Programme, aimed at providing quality English education to underprivileged Vietnamese children in Tay Ninh, a province in Vietnam. During the one month I spent in Tay Ninh, I had enjoyable coffee chats with the people in Tay Ninh English Club, to help them improve their conversational English. I was also given the autonomy to craft and conduct English lessons for underprivileged kids in various areas. Every day was extremely fulfilling, and I was immensely thankful for all the new experiences, and all the spontaneity and heartwarming new friendships made. Last but not least, I will always remain inspired by the love of learning displayed by the children and adults I interacted with.
-							   If you are interested in finding out more about this project and my experience, feel free to contact me through email or social media. :) </p>
+								 <a href="tayninh.html" target="_blank" class="button">Link to Project</a>
 							  </div>
 						</div>
 					</section>
@@ -286,7 +287,6 @@
 							<header>
 								<h2>Contact</h2>
 							</header>
-
 							<p>Feel free to drop me an email or send me a message on Linkedin to discuss potential work opportunities, or for a detailed resume. </p>
 
 							<!-- Social Icons -->
