--- a/GUCO.html
+++ b/GUCO.html
@@ -53,6 +53,7 @@
 						<div class="container">
 							<header>
 								<h2><center>GUCO Consulting Internship</center></h2>
+                <h1><center>May - July 2018</center></h1>
 							</header>
 
 							<a href="GUCO.png" class="image featured"><img src="images/GUCO.png" alt="" /></a>
