--- a/index.html
+++ b/index.html
@@ -60,9 +60,11 @@
 
 							<header>
                 <div class="bannertext">
-								<h2 class="alt">Celia Low</h2>
+								<h2 class="alt"><strong>Celia Low</strong></h2>
 
-								<p class ="aspiration"> Aspiring Brand Manager </p>
+								<p class ="aspiration"> Third Year Business(Marketing) Undergraduate
+						    <br>Aspiring Brand Manager </p>
+
               </div>
 							</header>
 
