for mobile screen

--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
                 <div class="bannertext">
 								<h2 class="alt"><strong>Celia Low</strong></h2>
 
-								<p class ="aspiration"> Third Year Business(Marketing) Undergraduate
-						    <br>Aspiring Brand Manager </p>
+								<p class ="aspiration"> Third Year Business(Marketing) Undergraduate</p>
 
               </div>
 							</header>
