--- a/index.html
+++ b/index.html
@@ -246,15 +246,13 @@
 
 				<hr>
 				<!-- About Me -->
-					<section id="about" class="three">
+					<section id="about" class="four">
 						<div class="container">
 							<header>
 								<h2><center>About Me</center></h2>
 							</header>
-
-							<!-- <a href="#" class="image featured"><img src="#" alt="" /></a> -->
 							<p class="selfintro">I am interested in marketing and brand management, and I see myself as a driven, adaptable, and resilient individual with a hunger to learn. Continuous growth, both professional and personal, is something I strongly believe in and apply in my daily life.</p>
-							<p class="quote"> My favourite quote is: <strong> "As we are liberated from our fear, our presence automatically liberates others." </strong>
+						  <p class="quote"> My favourite quote is: <strong> "As we are liberated from our fear, our presence automatically liberates others." </strong>
 						  I strive to encourage and inspire others to be better versions of themselves.</p>
 							<p class="cip"> One of my hobbies is volunteering, because I find a strong sense of fulfillment in helping others.
 									<!-- <div class="row">
@@ -278,11 +276,11 @@
 								 <!-- <a href="tayninh.html" target="_blank" class="tayninhbutton">Link to Project</a> -->
 
 								 <a href="tayninh.html" target="_blank" class="button">Link to Project</a>
-							  </div>
+							 </div>
 						</div>
 					</section>
 				<!-- Contact -->
-					<section id="contact" class="four">
+					<section id="contact" class="five">
 						<div class="container">
 
 							<header>
