--- a/GUCO.html
+++ b/GUCO.html
@@ -39,10 +39,10 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/celia-low/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
-							<li><a href="https://www.instagram.com/?hl=en" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="https://www.facebook.com/cel.ljm?ref=bookmarks" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="mailto:celia.low@u.nus.edu" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://www.linkedin.com/in/celia-low/" target="_blank" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+							<li><a href="https://www.instagram.com/?hl=en" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://www.facebook.com/cel.ljm?ref=bookmarks" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="mailto:celia.low@u.nus.edu" target="_blank" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
 				</div>
