--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 				<hr>
 				<!-- About Me -->
 					<section id="about" class="four">
-						<div class="aboutmecontainer">
+						<div class="container">
 							<header>
 								<h2><center>About Me</center></h2>
 							</header>
