change job desc

--- a/Delegate.html
+++ b/Delegate.html
@@ -57,7 +57,7 @@
 							</header>
 
 							<a href="Delegate.png" class="image featured"><img src="images/DelegateAsiaLogo.png" alt="" /></a>
-							<p class="delegatedescription">I worked at Delegate as a business development and partnerships intern. In my two months there, I was in charge of developing Delegate’s user and vendor base. I researched and generated more than 400 leads each for Singapore and Hong Kong, and suggested ideas to improve the onboarding of users through improvements to Delegate’s website and increasing user value. Over the course of my internship, I managed to convert more than 20 leads into vendors via emails, sales calls, and follow-up meetings. </p>
+							<p class="delegatedescription">Delegate Asia is an online platform for event planners, and I worked there as a business development and partnerships intern. In my two months at Delegate, I was in charge of developing its user and vendor base. I researched and generated more than 400 leads each for Singapore and Hong Kong, and suggested ideas to improve the onboarding of users through improvements to Delegate’s website and increasing user value. Over the course of my internship, I managed to convert more than 20 leads into vendors via emails, sales calls, and follow-up meetings. </p>
             </div>
 					</section>
 
