--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 									<article class="item">
 										<a href="GUCO.html" target="_blank" class="image fit"><img src="images/GUCO.png" alt="" /></a>
 										<header>
-											<h3>GUCO Consulting Group - Customised digital marketing services</h3>
+											<h3>GUCO Consulting Group</h3>
 										</header>
 									</article>
 								</div>
@@ -97,7 +97,7 @@
 									<article class="item">
 										<a href="ChangeBug.html" target="_blank" class="image fit"><img src="images/ChangeBugLogo.png" alt="" /></a>
 										<header>
-											<h3>ChangeBug - Pre-incubator for social enterprises</h3>
+											<h3>ChangeBug</h3>
 										</header>
 									</article>
 								</div>
@@ -105,7 +105,7 @@
 									<article class="item">
 										<a href="Delegate.html" target="_blank" class="image fit"><img src="images/DelegateAsiaLogo.png" alt="" /></a>
 										<header>
-											<h3>Delegate Asia - Online platform for event planners</h3>
+											<h3>Delegate Asia</h3>
 										</header>
 									</article>
 								</div>
