--- a/ChangeBug.html
+++ b/ChangeBug.html
@@ -1,1 +1,74 @@
-Pre-incubator for social enterprises
+<html>
+	<head>
+		<title>Celia - ChangeBug Internship</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/custom.css" />
+		<link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+
+	</head>
+	<body class="is-preload">
+
+		<!-- Header -->
+			<div id="header">
+
+				<div class="top">
+
+					<!-- Logo -->
+						<div id="logo">
+							<span class="image avatar48"><img src="images/avatar.png" alt="" /></span>
+							<h1 id="title" class="celia">Celia Low</h1>
+							<p class="oneliner">Marketing Enthusiast</p>
+						</div>
+
+					<!-- Nav -->
+						<nav id="nav">
+							<ul>
+								<li><a href="https://celialow.github.io/Profile/#top" target="_blank" id="top-link"><span class="icon fa-home">Intro</span></a></li>
+								<li><a href="https://celialow.github.io/Profile/#workexperience" target="_blank" id="workexperience-link"><span class="icon fa-briefcase">Work Experience</span></a></li>
+								<li><a href="https://celialow.github.io/Profile/#education" target="_blank" id="education-link"><span class="icon fa-graduation-cap">Education</span></a></li>
+								<li><a href="https://celialow.github.io/Profile/#about" target="_blank" id="about-link"><span class="icon fa-user">About Me</span></a></li>
+								<li><a href="https://celialow.github.io/Profile/#contact" target="_blank" id="contact-link"><span class="icon fa-envelope">Contact</span></a></li>
+							</ul>
+						</nav>
+
+				</div>
+
+				<div class="bottom">
+
+					<!-- Social Icons -->
+						<ul class="icons">
+							<li><a href="https://www.linkedin.com/in/celia-low/" target="_blank" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+							<li><a href="https://www.instagram.com/?hl=en" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://www.facebook.com/cel.ljm?ref=bookmarks" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="mailto:celia.low@u.nus.edu" target="_blank" class="icon fa-envelope"><span class="label">Email</span></a></li>
+						</ul>
+
+				</div>
+
+			</div>
+      <!-- ChangeBug Internship -->
+					<section id=Changebug class="three">
+						<div class="container">
+							<header>
+								<h2><center>ChangeBug Internship</center></h2>
+                <h1><center>May - July 2016</center></h1>
+							</header>
+
+							<a href="Changebug.png" class="image featured"><img src="images/ChangeBugLogo.png" alt="" /></a>
+							<p class="changebugdescription"> I interned at ChangeBug as a marketing and communications intern. ChanegBug is a social enterprise that acts as a pre-incubator for other social enterprises. During my three months there, I wrote marketing collateral and revamped ChangeBug’s website to improve its user engagement. I also started ChangeBug’s social outreach on Facebook and Instagram, to increase brand awareness. I was also seized the opportunity to handle the logistics budget for ChangeBug’s very first social hackathon held in collaboration with YouthCorps Singapore, which aimed to help participants ideate and assess the impact of their social enterprise ideas. On the business development end, I drafted proposals for potential partnerships with corporates for their corporate social responsibility programme.</p>
+            </div>
+					</section>
+
+          <!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
+</html>
