--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
 					<h2>Skills</h2>
 				</header>
 				<div class="row" id="skills">
-					<div class="col-2 col-0-small"></div>
-					<div class="col-5 col-12-small">
+					<div class="col-2 col-0-mobile"></div>
+					<div class="col-5 col-12-mobile">
 
 						<!-- <div class="skill"> -->
 							<!-- <div class="rating">
@@ -222,7 +222,7 @@
 					</div>
 
 					<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~Skills Column 2~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-					<div class="col-5 col-12-small" id="skills">
+					<div class="col-5 col-12-mobile" id="skills">
 						<!-- <div class="skill"> -->
 							<ul>
 							<li><p><b>Adobe Premier Pro</b></p></li>
