changed nus edu part

--- a/index.html
+++ b/index.html
@@ -157,11 +157,9 @@
 						<p> <strong>School of Business</strong></p>
 						<p> <strong>August 2016 - Present </strong></p>
 						<ul>
-							<li><i>Business Administration - Marketing (Honours) </i></li>
+							<li><i>Business Administration, Marketing(Hons.) </i></li>
 							<li>NUS Merit Scholarship</li>
 							<li>NUS Business School Gold Colours Award</li>
-							<li>Vice Director, NUS Bizad Club 30th Business Development Committee</li>
-							<li>Marketing Head, NUS Sheares Hall External Relations Committee</li>
 							<li>Expected Graduation Date: May 2020</li>
 
 						</ul>
