--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="bannertext">
 								<h2 class="alt"><strong>Celia Low</strong></h2>
 
-								<p class ="aspiration"> Third Year Business(Marketing) Undergraduate</p>
+								<p class ="aspiration"> Aspiring Brand Manager</p>
 
               </div>
 							</header>
