--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 						<p> <strong>School of Business</strong></p>
 						<p> <strong>August 2016 - Present </strong></p>
 						<ul>
-							<li><i>Business Admin, Marketing(Hons.) </i></li>
+							<li><i>Business Admin., Marketing(Hons.) </i></li>
 							<li>NUS Merit Scholarship</li>
 							<li>NUS Business School Gold Colours Award</li>
 							<li>Expected Graduation Date: May 2020</li>
