update sutd desc

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 						<ul>
 							<li> A Level Results: 6 Distinctions</li>
 							<li> Subjects: Physics, Chemistry, Mathematics, Economics, General Paper </li>
-							<li> Class Monitress and Service Leadership Venture Committee member</li>
+							<li> Class Representative and Service Leadership Venture Committee member</li>
 						</ul>
 					</div>
 				</div>
