--- a/SUTD.html
+++ b/SUTD.html
@@ -57,7 +57,7 @@
 							</header>
 
 							<a href="sutd.png" class="image featured"><img src="images/SUTDLogo.png" alt="" /></a>
-							<p class="gucodescription">I interned at the Singapore University of Technology and Design for a 2-month research project on the characterisation of urinary metabolites as a way to detect colorectal cancer. My partner and I collated a report and presented our findings at a school Science Symposium. Through this project, we learnt how to adapt to the challenges and uncertainty faced, while maintaining integrity throughout.</p>
+							<p class="SUTDdescription">I interned at the Singapore University of Technology and Design for a 2-month research project on the characterisation of urinary metabolites as a way to detect colorectal cancer. My partner and I collated a report and presented our findings at a school Science Symposium. Through this project, we learnt how to adapt to the challenges and uncertainty faced, while maintaining integrity throughout.</p>
             </div>
 					</section>
 
