--- a/DPInfo.html
+++ b/DPInfo.html
@@ -56,7 +56,7 @@
                 <h1><center>Jan - Feb 2016</center></h1>
 							</header>
 
-							<center><a href="DPInfo.png" class="image edit"><img src="images/DPLogo.png" alt="" /></a></center>
+							<center><a href="DPInfo.png" class="image edit"><img src="images/DPLogo.png" alt="" /></a></center><br>
 							<p class="DPdescription">DP Information Group is Singapore’s leading provider of information, analysis and intelligence on the Singapore corporate sector. I worked at DP Credit Bureau (under DP Information Group) as an administrative intern for 2 months. During my time there, I communicated professionally with business owners and helped them to renew their business and update their share capital. I also helped to improve debt management by liaising with clients, and carried out other administrative tasks assigned to me.</p>
             </div>
 					</section>
