--- a/SUTD.html
+++ b/SUTD.html
@@ -56,7 +56,7 @@
                 <h1><center>Nov 2014 - Jan 2015</center></h1>
 							</header>
 
-							<center><a href="sutd.png" class="image edit"><img src="images/SUTDLogo.png" alt="" /></a></center>
+							<center><a href="sutd.png" class="image edit"><img src="images/SUTDLogo.png" alt="" /></a></center><br>
 							<p class="SUTDdescription">I interned at the Singapore University of Technology and Design for a 2-month research project on the characterisation of urinary metabolites as a way to detect colorectal cancer. My partner and I collated a report and presented our findings at a school Science Symposium. Through this project, we learnt how to adapt to the challenges and uncertainty faced, while maintaining integrity throughout.</p>
             </div>
 					</section>
