--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
     <link rel="stylesheet" href="assets/css/custom.css" />
-		<link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+		<link rel="shortcut icon" type="image/png" href="images/favicon.jpg"/>
 
 	</head>
 	<body class="is-preload">
