included project work

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 						<p id = "education"> <strong> January 2014 - December 2015 </strong></p>
 						<ul>
 							<li> A Level Results: 7 Distinctions</li>
-							<li> Subjects: Physics, Chemistry, Mathematics, Economics, General Paper </li>
+							<li> Subjects: Physics, Chemistry, Mathematics, Economics, General Paper, Project Work </li>
 							<li> Class Representative and Service Leadership Venture Committee member</li>
 						</ul>
 					</div>
